--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,20 +1,23 @@
-name: Update Prices
+  name: Update Prices
 
-     on:
-     schedule:
+  on:
+    schedule:
       - cron: '0 */12 * * *'
-     workflow_dispatch:
+    workflow_dispatch:
 
-     jobs:
-     update:
+  jobs:
+    update:
       runs-on: ubuntu-latest
+      permissions:
+        contents: write
       steps:
         - uses: actions/checkout@v4
-        - name: Fetch prices
-          run: node scripts/fetch-prices.js
-        - name: Save changes
-          run: |
+        - uses: actions/setup-node@v4
+          with:
+            node-version: '20'
+        - run: node scripts/fetch-prices.js
+        - run: |
             git config user.name "github-actions"
             git config user.email "actions@github.com"
             git add prices.json
-            git diff --staged --quiet || (git commit -m "Update prices" && git push)
+            git commit -m "Update prices" && git push || echo "No changes to commit"
