--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,8 +1,7 @@
 name: Update Prices
 
-     on:
-     workflow_dispatch:
-
+     on: workflow_dispatch:
+     
      jobs:
      update:
       runs-on: ubuntu-latest
