--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,7 +1,8 @@
-  name: Update
-
-  on: workflow_dispatch
-
+name: Update Prices
+  on:
+    schedule:
+      - cron: '0 */12 * * *'
+    workflow_dispatch:
   jobs:
     build:
       runs-on: ubuntu-latest
@@ -9,12 +10,9 @@
         contents: write
       steps:
         - uses: actions/checkout@v4
-        - uses: actions/setup-node@v4
-          with:
-            node-version: '20'
-        - run: node scripts/get-prices.js
+        - run: node scripts/fetch-prices.js
         - run: |
-            git config user.name "github-actions"
-            git config user.email "actions@github.com"
+            git config user.name "Bot"
+            git config user.email "bot@example.com"
             git add prices.json
-            git commit -m "Update prices" && git push || echo "Nothing to commit"
+            git commit -m "Update prices" && git push || echo "No changes"
